// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Loading state renders a loading button 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }

  .c-dhzjXW {
    display: flex;
  }

  .c-jBOHFZ {
    animation-name: k-gJNjLs;
    animation-duration: 1s;
    animation-fill-mode: both;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
    background-color: currentColor;
    border-radius: var(--radii-round);
  }

  .c-jBOHFZ:nth-child(1) {
    animation-delay: -300ms;
  }

  .c-jBOHFZ:nth-child(2) {
    animation-delay: -150ms;
  }

  .c-jBOHFZ:nth-child(3) {
    animation-delay: 0;
  }

  .c-gTMqnE {
    align-items: center;
    display: flex;
    justify-content: center;
    visibility: hidden;
  }
}

@media  {
  .c-kaaUSm-dXsdwv-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-dXsdwv-size-md .c-dbrbZt {
    height: 20px;
    width: 20px;
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }

  .c-kaaUSm-DdIlq-isLoading-true {
    cursor: not-allowed;
    opacity: 0.6;
    pointer-events: none;
  }

  .c-dhzjXW-bICGYT-justify-center {
    justify-content: center;
  }

  .c-jBOHFZ-jIYkAt-size-md {
    height: 6px;
    width: 6px;
    margin-left: 2px;
    margin-right: 2px;
  }

  .c-gTMqnE-fVlWzK-size-md {
    gap: var(--space-3);
  }
}

@media  {
  .c-kaaUSm-dfkxSu-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):hover,
  .c-kaaUSm-dfkxSu-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-kaaUSm-fAhdck-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-kaaUSm-fAhdck-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):hover,
  .c-kaaUSm-fAhdck-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-kaaUSm-ctZbUF-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primaryDark);
  }

  .c-kaaUSm-ctZbUF-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-ctZbUF-cv:not([disabled]):hover,
  .c-kaaUSm-ctZbUF-cv:not([disabled]):focus {
    text-decoration: none;
    color: hsla(228, 82%, 25%, 1);
  }

  .c-kaaUSm-ctZbUF-cv:not([disabled]):active {
    color: hsla(228, 82%, 20%, 1);
  }
}

@media  {
  .c-dhzjXW-ibMCfDd-css {
    position: absolute;
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-dXsdwv-size-md c-kaaUSm-DdIlq-isLoading-true c-kaaUSm-dfkxSu-cv"
    type="button"
  >
    <div
      class="c-dhzjXW c-dhzjXW-bICGYT-justify-center c-dhzjXW-ibMCfDd-css"
      role="alert"
    >
      <span
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
      <div
        class="c-jBOHFZ c-jBOHFZ-jIYkAt-size-md"
      />
    </div>
    <span
      class="c-gTMqnE c-gTMqnE-fVlWzK-size-md"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component renders a button 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kaaUSm-dXsdwv-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-dXsdwv-size-md .c-dbrbZt {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-kaaUSm-dfkxSu-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):hover,
  .c-kaaUSm-dfkxSu-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-dXsdwv-size-md c-kaaUSm-dfkxSu-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a button with an icon 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-dbrbZt {
    display: inline-block;
    fill: none;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }
}

@media  {
  .c-kaaUSm-dXsdwv-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-dXsdwv-size-md .c-dbrbZt {
    height: 20px;
    width: 20px;
  }

  .c-dbrbZt-dMrjnF-size-md {
    height: var(--sizes-2);
    width: var(--sizes-2);
    stroke-width: 1.75;
  }
}

@media  {
  .c-kaaUSm-dfkxSu-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):hover,
  .c-kaaUSm-dfkxSu-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-kaaUSm-fAhdck-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-kaaUSm-fAhdck-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):hover,
  .c-kaaUSm-fAhdck-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-kaaUSm-ctZbUF-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primaryDark);
  }

  .c-kaaUSm-ctZbUF-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-ctZbUF-cv:not([disabled]):hover,
  .c-kaaUSm-ctZbUF-cv:not([disabled]):focus {
    text-decoration: none;
    color: hsla(228, 82%, 25%, 1);
  }

  .c-kaaUSm-ctZbUF-cv:not([disabled]):active {
    color: hsla(228, 82%, 20%, 1);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-dXsdwv-size-md c-kaaUSm-dfkxSu-cv"
    type="button"
  >
    BUTTON 
    <svg
      aria-hidden="true"
      class="c-dbrbZt c-dbrbZt-dMrjnF-size-md"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="4 13 9 18 20 7"
      />
    </svg>
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kaaUSm-dXsdwv-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-dXsdwv-size-md .c-dbrbZt {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-kaaUSm-dfkxSu-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):hover,
  .c-kaaUSm-dfkxSu-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-kaaUSm-fAhdck-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-kaaUSm-fAhdck-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):hover,
  .c-kaaUSm-fAhdck-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-dXsdwv-size-md c-kaaUSm-dfkxSu-cv"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled warning outline button 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kaaUSm-dXsdwv-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-dXsdwv-size-md .c-dbrbZt {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-kaaUSm-dfkxSu-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):hover,
  .c-kaaUSm-dfkxSu-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-kaaUSm-fAhdck-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-kaaUSm-fAhdck-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):hover,
  .c-kaaUSm-fAhdck-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-dXsdwv-size-md"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kaaUSm-dXsdwv-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-dXsdwv-size-md .c-dbrbZt {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-kaaUSm-dfkxSu-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):hover,
  .c-kaaUSm-dfkxSu-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-kaaUSm-fAhdck-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-kaaUSm-fAhdck-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):hover,
  .c-kaaUSm-fAhdck-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-dXsdwv-size-md c-kaaUSm-fAhdck-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button with secondary theme 1`] = `
@media  {
  .c-kaaUSm {
    align-items: center;
    background: unset;
    border: unset;
    border-radius: var(--radii-0);
    cursor: pointer;
    display: flex;
    font-family: var(--fonts-body);
    font-weight: 600;
    justify-content: center;
    padding: unset;
    text-decoration: none;
    transition: all 100ms ease-out;
    white-space: nowrap;
    width: max-content;
  }

  .c-kaaUSm[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }
}

@media  {
  .c-kaaUSm-dXsdwv-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
    height: var(--sizes-4);
    padding-left: var(--space-5);
    padding-right: var(--space-5);
    gap: var(--space-3);
  }

  .c-kaaUSm-dXsdwv-size-md .c-dbrbZt {
    height: 20px;
    width: 20px;
  }
}

@media  {
  .c-kaaUSm-dfkxSu-cv {
    background: var(--colors-primary);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):hover,
  .c-kaaUSm-dfkxSu-cv:not([disabled]):focus {
    background: var(--colors-primaryMid);
    color: white;
  }

  .c-kaaUSm-dfkxSu-cv:not([disabled]):active {
    background: var(--colors-primaryDark);
  }

  .c-kaaUSm-fAhdck-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primary);
  }

  .c-kaaUSm-fAhdck-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):hover,
  .c-kaaUSm-fAhdck-cv:not([disabled]):focus {
    text-decoration: none;
    color: var(--colors-primaryMid);
  }

  .c-kaaUSm-fAhdck-cv:not([disabled]):active {
    color: var(--colors-primaryDark);
  }

  .c-kaaUSm-ctZbUF-cv {
    border: 1px solid;
    border-color: currentColor;
    color: var(--colors-primaryDark);
  }

  .c-kaaUSm-ctZbUF-cv[disabled] {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kaaUSm-ctZbUF-cv:not([disabled]):hover,
  .c-kaaUSm-ctZbUF-cv:not([disabled]):focus {
    text-decoration: none;
    color: hsla(228, 82%, 25%, 1);
  }

  .c-kaaUSm-ctZbUF-cv:not([disabled]):active {
    color: hsla(228, 82%, 20%, 1);
  }
}

<div>
  <button
    class="c-kaaUSm c-kaaUSm-dXsdwv-size-md c-kaaUSm-ctZbUF-cv"
    type="button"
  >
    BUTTON
  </button>
</div>
`;
